SPRING FRAMEWORK CHANGELOG
==========================
http://www.springframework.org


Changes in 2.5.x maintenance branch
-----------------------------------

Package org.springframework.jdbc
* added sort to all error code categories for SQLErrorCodes (SPR-5272)
* added custom SQLExceptionTranslator to provide customized translation for any SQLException (SPR-4899 backport)
* added a DuplicatKeyException catagory for SQLException translation (SPR-5125 backport)
* added a concrete GenericSqlQuery class to make it possible to configure in application context (SPR-3986 backport)
* added a concrete GenericStoredProcedure class to make it possible to configure using application context (SPR-3987 backport)
* added synchronized to compile of AbstractJdbcCall and AbstractJdbcInsert (SPR-6001 backport)
* added -1218 to the transientDataAccessResourceCodes for DB2 (SPR-5296 backport)
* added override for supportsGetGeneratedKeys for Derby; driver reports this is unsupported, but it seems to work OK (SPR-5306 backport)
* fixed problem retrieving out parameter for function call with MS SQL Server (SPR-5435 backport)
* fixed SimpleJdbcInsert/AbstractJdbcInsert to use SQL type info for all insert operations (SPR-5635 backport)

Package org.springframework.jms
* fixed JmsUtils.buildExceptionMessage to avoid potential NPE (SPR-5275)
* fixed JmsException/JmsUtils to fully avoid NPEs in case of cause messages being null
* JMS SingleConnectionFactory performs start call within connection monitor and only when not started already (SPR-5987 backport)
* fixed MessageListenerAdapter's "getSubscriptionName()" to work without delegate as well (SPR-5309 backport)

Package org.springframework.orm
* AnnotationSessionFactoryBean now properly scans subpackages as well (SPR-5324)

Package org.springframework.remoting
* fixed HTTP invoker to support resolution of multi-level primitive array classes again (SPR-5473 backport)

Package org.springframework.transaction